Search for Products by Keyword - Update ProductService API

--- a/03-frontend/angular-ecommerce/src/app/components/search/search.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="form-header">
 
-    <input type="text"
+    <input #myInput type="text"
             placeholder="Search for Products ..." 
             class="au-input au-input-xl"    
             (keyup.enter)="doSearch(myInput.value)"/>
