--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -1,9 +1,5 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
-
-        <h4>Category: {{ currentCategoryName }}</h4>
-        <hr>
-
         <div class="container-fluid">
             <div class="row">
 
@@ -18,6 +14,12 @@
                     </div>
 
                 </div>
+
+                <!-- if products empty then display a message-->
+                <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+                    No products found.
+                </div>
+
             </div>
         </div>
     </div>
