--- a/03-frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -1,5 +1,5 @@
 <div class="detail-section">
     <div container-fluid>
-        <p style="margin-top : 100px">product-details works!</p>
+        <p style="margin-top : 100px">{{product.name}}</p>
     </div>
-</div>  
+</div>
