--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -15,7 +15,7 @@
                         <a routerLink="/products/{{ tempProduct.id }}">
                             <h1>{{ tempProduct.name }}</h1>
                         </a>
-                        
+
                         <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
                     </div>
@@ -28,6 +28,30 @@
                 </div>
 
             </div>
+
+            <!-- Begin Footer -->
+            <div class="footer-pagination">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-md-9" style="padding-left: 30%">
+
+                                    <ngb-pagination 
+                                        [(page)]="thePageNumber"
+                                        [pageSize]="thePageSize"
+                                        [collectionSize]="theTotalElements" 
+                                        (pageChange)="listProducts()">
+                                    </ngb-pagination>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Footer -->
+
         </div>
     </div>
 </div>
