--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -29,28 +29,44 @@
 
             </div>
 
-            <!-- Begin Footer -->
+            <!-- begin footer -->
             <div class="footer-pagination">
                 <div class="row">
+                    <div class="col-md-6"></div>
+
                     <div class="col-md-6">
-                        <div class="col-md-6">
-                            <div class="row">
-                                <div class="col-md-9" style="padding-left: 30%">
+                        <div class="row">
+                            <div class="col-md-9" style="padding-left: 30%">
 
-                                    <ngb-pagination 
-                                        [(page)]="thePageNumber"
-                                        [pageSize]="thePageSize"
-                                        [collectionSize]="theTotalElements" 
-                                        (pageChange)="listProducts()">
-                                    </ngb-pagination>
+                                <ngb-pagination 
+                                    [(page)]="thePageNumber" 
+                                    [pageSize]="thePageSize"
+                                    [collectionSize]="theTotalElements" 
+                                    [maxSize]="3"
+                                    [boundaryLinks]="true"
+                                    (pageChange)="listProducts()">
 
-                                </div>
+                                </ngb-pagination>
+
                             </div>
+
+                            <div class="col-md-3 mt-2" style="text-align: right;">
+                                <span class="mr-2">Page Size</span>
+
+                                <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                                    <option selected="true">5</option>
+                                    <option>10</option>
+                                    <option>20</option>
+                                    <option>50</option>
+                                </select>
+                            </div>
+
                         </div>
                     </div>
+
                 </div>
             </div>
-            <!-- End Footer -->
+            <!-- end footer -->
 
         </div>
     </div>
