--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -2,55 +2,43 @@
     <div class="section-content section-content-p30">
         <div class="container-fluid">
             <div class="row">
-
-                <!-- loop over the collection of products -->
+                <!-- Loop over the collection of products -->
                 <div *ngFor="let tempProduct of products" class="col-md-3">
-
                     <div class="product-box">
-
                         <a routerLink="/products/{{ tempProduct.id }}">
                             <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
                         </a>
-
                         <a routerLink="/products/{{ tempProduct.id }}">
                             <h1>{{ tempProduct.name }}</h1>
                         </a>
-                        
                         <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
                     </div>
-
                 </div>
 
-                <!-- if products empty then display a message-->
+                <!-- If products empty, display a message -->
                 <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
                     No products found.
                 </div>
-
             </div>
 
-            <!-- begin footer -->
+            <!-- Begin footer -->
             <div class="footer-pagination">
                 <div class="row">
                     <div class="col-md-6"></div>
 
                     <div class="col-md-6">
                         <div class="row">
-                            <div class="col-md-9" style="padding-left: 30%">
-                            
-                                <ngb-pagination [(page)]="thePageNumber"
-                                                [pageSize]="thePageSize"
-                                                [collectionSize]="theTotalElements"
-                                                [maxSize]="5"
-                                                (pageChange)="listProducts()">
-
+                            <div class="col-md-9">
+                                <!-- Pagination -->
+                                <ngb-pagination [(page)]="thePageNumber" [pageSize]="thePageSize"
+                                    [collectionSize]="theTotalElements" [maxSize]="5" (pageChange)="listProducts()">
                                 </ngb-pagination>
-
                             </div>
 
-                            <div class="col-md-3 mt-2" style="text-align: right;">
+                            <div class="col-md-3 mt-2">
+                                <!-- Page Size Selector -->
                                 <span class="mr-2">Page Size</span>
-
                                 <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
                                     <option>2</option>
                                     <option selected="true">5</option>
@@ -59,14 +47,11 @@
                                     <option>50</option>
                                 </select>
                             </div>
-
                         </div>
                     </div>
-
                 </div>
             </div>
-            <!-- end footer -->
-
+            <!-- End footer -->
         </div>
     </div>
 </div>
