--- a/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -1,3 +1,15 @@
 <div class="main-content">
-<h1>hello</h1>
+    <div class="section-content section-content-p30">
+        <div class="container-fluid">
+            <table class="table table-bordered">
+                <tr>
+                    <th width="20%">Product Image</th>
+                    <th width="50%">Product Detail</th>
+                    <th width="30%">
+
+                    </th>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
