--- a/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -5,9 +5,31 @@
                 <tr>
                     <th width="20%">Product Image</th>
                     <th width="50%">Product Detail</th>
-                    <th width="30%">
+                    <th width="30%"></th>
+                </tr>
+                <tr *ngFor="let tempCartItem of cartItems">
+                    <td>
+                        <img src="{{ tempCartItem.imageUrl }}" class="img-responsive" width="150px" />
+                    </td>
+                    <td>
+                        <p>{{tempCartItem.name}}</p>
+                        <p>{{tempCartItem.unitPrice | currency: 'USD'}}</p>
+                    </td>
+                    <td>
+                        <div class="items">
+                            <label>Quantity</label>{{tempCartItem.quantity}}
+                            <p class="mt-2">Subtotal: {{tempCartItem.quantity * tempCartItem.unitPrice |currency:'USD' }} </p>
+                        </div>
 
-                    </th>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2"></td>
+                    <td style="font-weight: bold">
+                        <p>Total Quantity: {{totalQuantity}}</p>
+                        <p>Shipping: Free</p>
+                        <p>Total Price: {{totalPrice | currency: 'USD'}}</p>
+                    </td>
                 </tr>
             </table>
         </div>
