--- a/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -18,10 +18,26 @@
                         </td>
                         <td>
                             <div class="items">
-                                <label>Quantity</label>{{tempCartItem.quantity}}
-                                <p class="mt-2">Subtotal: {{tempCartItem.quantity * tempCartItem.unitPrice
-                                    |currency:'USD' }} </p>
+                                <label>Quantity</label>
+                                <div class="row no-gutters">
+                                    <div class="col">
+                                        <button (click)="incrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
+                                            <i class="fas fa-plus"></i>
+                                        </button>
+                                    </div>
+                                    <div class="col ml-4 mr-2">
+                                        {{tempCartItem.quantity}}
+                                    </div>
+                                    <div class="col">
+                                        <button  (click)="decrementQuantity(tempCartItem)" class=" btn btn-primary btn-sm">
+                                            <i class="fas fa-minus"></i>
+                                        </button>
+                                    </div>
+                                    <div class="col-8"></div>
+                                </div>
                             </div>
+                            <p class="mt-2">Subtotal: {{tempCartItem.quantity * tempCartItem.unitPrice
+                                |currency:'USD' }} </p>
 
                         </td>
                     </tr>
@@ -34,10 +50,9 @@
                         </td>
                     </tr>
                 </table>
-            </div>
-            <div *ngIf="cartItems.length == 0" class="alert alert-warning col-md-12" role="alert">
-                Your Cart is Empty.
-            </div>
+        </div>
+        <div *ngIf="cartItems.length == 0" class="alert alert-warning col-md-12" role="alert">
+            Your Cart is Empty.
         </div>
     </div>
 </div>
