List Shopping Cart Items - Add Checkout Component and Update Cart Summary

--- a/03-frontend/angular-ecommerce/src/styles.css
+++ b/03-frontend/angular-ecommerce/src/styles.css
@@ -556,6 +556,16 @@ input.au-input.au-input-xl {
  * ----------------------------
  */
 
+ .items.summary {
+     border: none;
+     padding: 15px;
+ }
+
+ .items.summary p {
+     margin-bottom: 10px;
+     font-weight: bold;
+ }
+
 .product-box img {
     width: 150px;
 }
