List Shopping Cart Items - Implement Reactive Forms in Checkout Component

--- a/03-frontend/angular-ecommerce/src/styles.css
+++ b/03-frontend/angular-ecommerce/src/styles.css
@@ -1043,7 +1043,7 @@ footer ul li {
     }
 
     .main-content.page-m {
-        padding: 10% 0 !important
+        padding: 10% 30% 10% 15% 
     }
 
     .header-mobile .navbar-mobile {
