--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -36,19 +36,19 @@
 
                     <div class="col-md-6">
                         <div class="row">
-                            <div class="col-md-9" style="padding-left: 30%">
-
+                            <!-- Changed col-md-9 to col-md-8 and adjusted padding -->
+                            <div class="col-md-8" style="padding-left: 15%">
                                 <ngb-pagination [(page)]="thePageNumber" [pageSize]="thePageSize"
                                     [collectionSize]="theTotalElements" [maxSize]="5" [boundaryLinks]="true"
                                     (pageChange)="listProducts()">
-
                                 </ngb-pagination>
-
                             </div>
 
-                            <div class="col-md-3 mt-2" style="text-align: right;">
-                                <span class="mr-2">Page Size</span>
-                                <select #myPageSelect (change)="updatePageSize(+myPageSelect.value)">
+                            <!-- Changed col-md-3 to col-md-4 and adjusted styling -->
+                            <div class="col-md-4 mt-2 d-flex align-items-center justify-content-end">
+                                <span class="me-2">Page Size</span>
+                                <select #myPageSelect (change)="updatePageSize(+myPageSelect.value)"
+                                    class="form-select form-select-sm" style="width: auto">
                                     <option>2</option>
                                     <option selected="true">5</option>
                                     <option>10</option>
@@ -56,7 +56,6 @@
                                     <option>50</option>
                                 </select>
                             </div>
-
                         </div>
                     </div>
 
