--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -5,7 +5,7 @@
             <form [formGroup]="checkoutFormGroup" (ngSubmit)="onSubmit()">
 
                 <!-- customer form group -->
-                <div formGroupName="customer" class="form-area" >
+                <div formGroupName="customer" class="form-area">
                     <h3>Customer</h3>
 
                     <div class="row">
@@ -29,7 +29,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="row">
                         <div class="col-md-2">
                             <label for="lastName">Email</label>
@@ -42,13 +42,23 @@
                     </div>
                 </div>
                 <!--   shipping Address -->
-                <div formGroupName="shippedAddress" class="form-area">
+                <!-- shipping Address -->
+                <div formGroupName="shippingAddress" class="form-area">
                     <h3>Shipping Address</h3>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="street">Street</label>
+                        <div class="col-md-2"> <label>Country</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="country">
+                                    <option>TO DO</option>
+                                </select>
+                            </div>
                         </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"> <label>Street</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
@@ -57,9 +67,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="city">City</label>
-                        </div>
+                        <div class="col-md-2"> <label>City</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text">
@@ -68,47 +76,51 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="state">State</label>
-                        </div>
+                        <div class="col-md-2"> <label>State</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <input formControlName="state" type="text">
+                                <select formControlName="state">
+                                    <option>TO DO</option>
+                                </select>
                             </div>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="country">Country</label>
-                        </div>
-                        <div class="col-md-9">
-                            <div class="input-space">
-                                <input formControlName="country" type="text">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-2">
-                            <label for="zipCode">Zip Code</label>
-                        </div>
+                        <div class="col-md-2"> <label>Zip Code</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
                             </div>
                         </div>
                     </div>
+
                 </div>
 
+                <!-- Add check box to copy shipping to billing -->
+                <div class="input-space">
+                    <label class="au-checkbox">
+                        <input type="checkbox" (change)="copyShippingAddressToBillingAddress($event)">
+                        <span class="au-checkmark"></span>Billing Address same as Shipping Address
+                    </label>
+                </div>
                 <!--billingAddress  -->
                 <div formGroupName="billingAddress" class="form-area">
                     <h3>Billing Address</h3>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="street">Street</label>
+                        <div class="col-md-2"> <label>Country</label></div>
+                        <div class="col-md-9">
+                            <div class="input-space">
+                                <select formControlName="country">
+                                    <option>TO DO</option>
+                                </select>
+                            </div>
                         </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2"> <label>Street</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text">
@@ -117,9 +129,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="city">City</label>
-                        </div>
+                        <div class="col-md-2"> <label>City</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text">
@@ -128,38 +138,27 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="state">State</label>
-                        </div>
+                        <div class="col-md-2"> <label>State</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <input formControlName="state" type="text">
+                                <select formControlName="state">
+                                    <option>TO DO</option>
+                                </select>
                             </div>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2">
-                            <label for="country">Country</label>
-                        </div>
-                        <div class="col-md-9">
-                            <div class="input-space">
-                                <input formControlName="country" type="text">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-2">
-                            <label for="zipCode">Zip Code</label>
-                        </div>
+                        <div class="col-md-2"> <label>Zip Code</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text">
                             </div>
                         </div>
                     </div>
+
                 </div>
+
                 <!-- submit button -->
 
                 <div class="text-center">
