Checkout Form Layout - Review Your Order

--- a/03-frontend/angular-ecommerce/src/app/app.component.html
+++ b/03-frontend/angular-ecommerce/src/app/app.component.html
@@ -40,7 +40,7 @@
 <!-- ENDS PAGE CONTAINER -->
 
 <footer>
-  <ul>
+  <ul class="m-0">
     <li><a href="#">About Us</a></li>
     <li><a href="#">Contact Us</a></li>
     <li><a href="#">Help</a></li>
