--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -226,6 +226,15 @@
 
                 </div>
 
+                <!-- order Details -->
+                <div class="form-area">
+                    <h3>Review Your Order</h3>
+
+                    <p>Total Quantity: {{totalQuantity}}</p>
+                    <p>Shipping Free</p>
+                    <p>Total Price: {{totalPrice | currency:'USD'}}</p>
+                </div>
+
                 <!-- submit button -->
 
                 <div class="text-center">
